# rosalind

./: rosalind.cabal
dna/: dna.hs
fib/: fib.hs
gc/: gc.hs
hamm/: hamm.hs
perm/: perm.hs
prot/: prot.hs
prtm/: prtm.hs
revc/: revc.hs
rna/: rna.hs
src/: cons.hs  dna.hs  fib.hs  fibd.hs  gc.hs  grph_1.hs  grph_2.hs  hamm.hs  iev.hs  iprb.hs  lcsm.hs  mprt.hs  mrna.hs  perm.hs  prot.hs  prtm.hs  revc.hs  revp.hs  rna.hs  splc.hs  subs.hs
subs/: subs.hs
